--- a/src/Shared-Libs/ManagedLoader/Datadog.AutoInstrumentation.ManagedLoader.csproj
+++ b/src/Shared-Libs/ManagedLoader/Datadog.AutoInstrumentation.ManagedLoader.csproj
@@ -32,7 +32,7 @@
   </ItemGroup>
 
   <Target Name="CopyFiles" AfterTargets="Build">
-    <Copy SourceFiles="@(ResourceFilesOut)" DestinationFolder="$(ResourceOutPath)" />
+    <Copy SourceFiles="@(ResourceFilesOut)" DestinationFolder="$(ResourceOutPath)" SkipUnchangedFiles="false" />
   </Target>
 	
   <PropertyGroup>
