--- a/.azure-pipelines/crank.yml
+++ b/.azure-pipelines/crank.yml
@@ -111,6 +111,9 @@ jobs:
 
 
 - job: crank
+  pool: Throughput
+  workspace:
+    clean: all
   dependsOn:
   - linux_profiler
   - windows_profiler
