Change release mode of the linux profiler.

--- a/.azure-pipelines/crank.yml
+++ b/.azure-pipelines/crank.yml
@@ -102,7 +102,7 @@ jobs:
 
   - script: |
       cd ./src/Datadog.Trace.ClrProfiler.Native
-      CXX=clang++ CC=clang cmake .
+      CXX=clang++ CC=clang cmake . -DCMAKE_BUILD_TYPE=Release
       make
     displayName: build_profiler
 
