Add a crank midnight run over master

--- a/.azure-pipelines/crank.yml
+++ b/.azure-pipelines/crank.yml
@@ -16,6 +16,13 @@ pr:
       - docs/*
       - .github/*
 
+schedules:
+- cron: "0 0 * * *"
+  displayName: Daily midnight run
+  branches:
+    include:
+    - master
+
 jobs:
 
 
