--- a/src/Datadog.Trace/Datadog.Trace.csproj
+++ b/src/Datadog.Trace/Datadog.Trace.csproj
@@ -50,6 +50,18 @@
     <DefineConstants>$(DefineConstants);ASYNCLOCAL;HASHTABLE</DefineConstants>
   </PropertyGroup>
 
+  <PropertyGroup Condition="$(TargetFramework.StartsWith('netcoreapp2')) OR $(TargetFramework.StartsWith('netcoreapp3')) OR $(TargetFramework.StartsWith('net5')) OR $(TargetFramework.StartsWith('net6'))">
+    <DefineConstants>$(DefineConstants);HAVE_ASSEMBLYLOADCONTEXT</DefineConstants>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="$(TargetFramework.StartsWith('netcoreapp2')) OR $(TargetFramework.StartsWith('netcoreapp3')) OR $(TargetFramework.StartsWith('net5')) OR $(TargetFramework.StartsWith('net6'))">
+    <DefineConstants>$(DefineConstants);HAVE_ASSEMBLYLOADCONTEXT</DefineConstants>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="$(TargetFramework.StartsWith('netstandard2'))">
+    <DefineConstants>$(DefineConstants);IS_NETSTANDARD2_X</DefineConstants>
+  </PropertyGroup>
+
   <!-- Remove System.Collections.NonGeneric. This was defined in Serilog 2.8.0 but it is unnecessary -->
   <!--
   <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
