--- a/src/Datadog.Trace.AssemblyLoadContext/Datadog.Trace.AssemblyLoadContext.csproj
+++ b/src/Datadog.Trace.AssemblyLoadContext/Datadog.Trace.AssemblyLoadContext.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
 	</PropertyGroup>
 	<PropertyGroup>
 		<IsPackable>false</IsPackable>
