--- a/test/test-applications/regression/DuplicateTypeProxy/DuplicateTypeProxy.csproj
+++ b/test/test-applications/regression/DuplicateTypeProxy/DuplicateTypeProxy.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-      <TargetFrameworks>net47;netcoreapp2.1;netcoreapp3.1;net5.0</TargetFrameworks>
+      <TargetFrameworks>netcoreapp3.1;netcoreapp3.0;netcoreapp2.2;netcoreapp2.1</TargetFrameworks>
+      <TargetFrameworks Condition="$(MSBuildVersion) >= 16.8.0">$(TargetFrameworks);net5.0</TargetFrameworks>
       <LoadManagedProfilerFromProfilerDirectory>true</LoadManagedProfilerFromProfilerDirectory>
     </PropertyGroup>
 
