Setup Group-Repo build system

--- a/samples/Datadog.DynamicDiagnosticSourceBindings.Demo/NuGet.config
+++ b/samples/Datadog.DynamicDiagnosticSourceBindings.Demo/NuGet.config
@@ -17,6 +17,6 @@
     <clear />
   </disabledPackageSources>
   <config>
-    <add key="RepositoryPath" value="../../packages" />
+    <add key="RepositoryPath" value="../../../.build/ImportedPackages" />
   </config>
 </configuration>
