--- a/src/Shared-Libs/DynamicDiagnosticSourceBindings/VendoredLibs.DiagnosticSource.props
+++ b/src/Shared-Libs/DynamicDiagnosticSourceBindings/VendoredLibs.DiagnosticSource.props
@@ -1,5 +1,10 @@
 <Project>
 
+  <ItemGroup>
+    <!-- reference assemblies let us target .NET Framework without the SDK (for example, on non-Windows) -->
+    <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.0" PrivateAssets="all" />
+  </ItemGroup>
+
   <PropertyGroup>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <CLSCompliant>false</CLSCompliant>
