--- a/.azure-pipelines/ultimate-pipeline.yml
+++ b/.azure-pipelines/ultimate-pipeline.yml
@@ -1,7 +1,7 @@
 trigger:
   branches:
     include:
-      - '*'
+      - master # Only run on master for now
     exclude:
       - refs/pull/*/head
   paths:
