--- a/.azure-pipelines/ultimate-pipeline.yml
+++ b/.azure-pipelines/ultimate-pipeline.yml
@@ -248,20 +248,13 @@ stages:
         artifact: build-managed
         path: $(System.DefaultWorkingDirectory)
 
-    - script: |
-        cd ./src/Datadog.Trace.ClrProfiler.Native
-        cmake .
-        make
-      displayName: build_profiler
+    - script: build.cmd CompileNativeSrcMacOS --skip
+      displayName: Compile native src
 
-    - script: |
-        mkdir -p src/Datadog.Trace.ClrProfiler.Native/bin/netstandard2.0
-        cp src/bin/tracer-home/netstandard2.0/*.dll src/Datadog.Trace.ClrProfiler.Native/bin/netstandard2.0/
-        mkdir -p src/Datadog.Trace.ClrProfiler.Native/bin/netcoreapp3.1
-        cp src/bin/tracer-home/netcoreapp3.1/*.dll src/Datadog.Trace.ClrProfiler.Native/bin/netcoreapp3.1/
-      displayName: Copy files into build-macos-tracer-home
+    - script: build.cmd PublishNativeProfilerMacOs --skip
+      displayName: Compile native src
 
-    - publish: $(System.DefaultWorkingDirectory)/src/Datadog.Trace.ClrProfiler.Native/bin
+    - publish: $(tracerHome)/macos
       displayName: Uploading macos profiler artifact
       artifact: build-macos-tracer-home
 
